complete quiz, no perfect, timed

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/css/materialize.min.css'>
 </head>
 <body>
-
+    <h1>
+        Avengers Trivia!
+    </h1>
+    <h4>Time Left: <span class="time"></span></h4>
     <div class="container">
        
     </div>
